	* il_tpl.c: Added support for many more TPL data formats.
	* il_tpl.c: Added support for color indexed data formats.
	* il_tpl.c: Added support for multiple images in a file.
	* il_sdl.c (ilutConvertToSDLSurface): Overhauled this code.
	* ilut_opengl.c: Removed iGLSetMaxW/H/D and MaxTexW/H/D.
	* ilut_states.h/ilut_states.c: Added MaxTexW/H/D to ILUT_STATES.
	* ilut_states.c (ilutGetIntegerv): Added ILUT_MAXTEX_WIDTH/HEIGHT/DEPTH.

2009-01-28 Denton Woods <doomwiz@users.sf.net>
	* il_tpl.c: Added line 219.

2009-01-30 Denton Woods <doomwiz@users.sf.net>
	* Added DevIL.NET to projects folder.
	* il_dds.c: Changed Image->Next code for cubemaps to read Image->Faces.  Also changed Image->Next
	  code for mipmaps to read Image->Mipmaps, even further down the chain.
	* il_dds.c (ilTexImageDxtc): Added call to ilCloseImage for Image->Faces.
	* il_endian.h:113: Fixed bug #2545848 - inline GCC ASM changed.
	* ilut_directx9.c (ilutD3D9CubeTexture): Changed ->Next to ->Faces.
	* ilut_directx9.c (iD3D9CreateMipmaps): Changed ->Next to ->Mipmaps.
	* il_states.c:605: Changed from ->Next to ->Mipmaps.
	* il_states.c (iGetActiveNum): Rewrote to not use ->Next pointer for everything.
	* il_vtf.c (VtfInitMipmaps): Changed to reflect the new mipmap arrangement as well.
	* il_wal.c:141,142: Changed ->Next to ->Mipmaps.
	* il_wal.c: Cleaned up the formatting a bit.
	* il_stack.c (ilActiveMipmap): Changed ->Next to ->Mipmaps.
	* il_stack.c (ilActiveImage/Mipmap/Face/Layer): Added another check for NULL, changed error.
	  Changed order of statements in for loop.  This leads to much much less in the way of
	  ilSetError calls, since we do not have iCurImage == NULL.
	* il_vtf.h:43: Changed to ILuint from ILint.
	* il_vtf.c: Changed VtfInitMipmaps calls to VtfInitFacesMipmaps calls and changed iLoadVtfInternal
	  to support environment maps.
	* il.h:384: Added IL_SPHEREMAP.

2009-01-31 Denton Woods <doomwiz@users.sf.net>
	* Added newlines to several files to keep gcc quiet.
	